--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -207,7 +207,7 @@ Note that the SPIN representation is NOT a mapping, but a direct expression of t
 
 On the other hand, it can be seen that the higher-level constraint languages are comparatively similar, there seems to be a pattern, a common way to express this type of constraint. Therefore, a mapping from a high-level language to another high-level language would be considerably easier. Unfortunately, there is not (yet) a high-level language that supports all constraint types. 
 
-In this paper, we build on the experience gained from mapping several constraint languages to SPIN and from the analysis of the identified constraint types to create an intermediate layer, a framework that is able to describe the mechanics of all constraint types and that can be used to map high-level languages more easily. 
+In this paper, we build on the experience gained from mapping several constraint languages to SPIN and from the analysis of the identified constraint types \tb{was haben wir analysiert? meinst du die constraint type specific expressivity of constraint languages?}to create an intermediate layer, a framework that is able to describe the mechanics of all constraint types and that can be used to map high-level languages more easily. \tb{sollten wir hier nicht alle contributions nennen? ich denke im abstact stehen sie alle}
 
 
 
