--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -957,10 +957,10 @@ The W3C Data Shapes Working Group currently develops \emph{SHACL} \cite{W3C-SHAC
 
 \section{Conclusion and Future Work}
 
-In this paper, we outlined our idea of a general framework to support the mapping of high-level constraint languages to a generic representation, which subsequently can be used to generate validating SPIN/SPARQL queries to actually validate data against constraints provided in the high-level language. The framework consists of a very simple conceptual model using the RDF Constraints Vocabulary (RDF-CV) which has been introduced in this paper. The core of the framework is the definition of 103 constraining elements that are used to define all 81 types of constraints that to date have been identified within the \emph{DCMI RDF Application Profiles Task Group} and in cooperation with the \emph{W3C Data Shapes Working Group}.
-The full definition of all constraint types and the representation of the types in RDF-CV is provided in an accompanying technical report \cite{BoschNolleAcarEckert2015}.
+In this paper, we outlined our idea of a general framework to support the mapping of high-level constraint languages to a generic representation, which subsequently can be used to generate validating SPIN/SPARQL queries to actually validate data against constraints provided in the high-level language. The framework consists of a very simple conceptual model using the RDF Constraints Vocabulary (RDF-CV) which has been introduced in this paper. The core of the framework is the definition of 103 constraining elements that are used to define constraints of all 81 types that to date have been identified within the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group.
+The full definition of all constraint types and the generic representation of the types in RDF-CV is provided in an accompanying technical report \cite{BoschNolleAcarEckert2015}.
 
-We have demonstrated how the framework can be used to map a constraint language to RDF-CV and also how to map back from RDF-CV to the constraint language. The latter enables the transformation of sematically equivalent constraints from one constraint language to another via the RDF-CV intermediate representation.
+We have demonstrated how the framework can be used to map a constraint language to RDF-CV and also how to map back from RDF-CV to the constraint language. The latter enables the transformation of semantically equivalent constraints from one constraint language to another via the RDF-CV intermediate representation.
 
 We think that this approach is suitable
 \begin{enumerate}
@@ -969,7 +969,7 @@ We think that this approach is suitable
   \item to enhance or rather establish the interoperability of different constraint languages.
 \end{enumerate}
 
-It is part of future work to finalize the implementation of all 81 constraint types in our \emph{RDF Validator}, to fully map constraint languages to RDF-CV (first and foremost DSP and OWL) and of course keep the framework in sync with the ongoing work in the working groups.
+It is part of future work to finalize the implementation of all 81 constraint types in our \emph{RDF Validator}, to fully map constraint languages to RDF-CV (first and foremost DSP and OWL 2) and of course keep the framework in sync with the ongoing work in the working groups.
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{apacite}
