--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -147,7 +147,7 @@ we identified by today 81 constraint types, where each type corresponds to a spe
 Various constraint languages exist or are being developed that support more or less of these constraint types. For our work, we focus on the following four as the ones that are most popular among data practitioners, often mentioned on mailing lists and/or being candidates or prototypes for the upcoming W3C recommendation:
 \emph{Description Set Profiles (DSP)}\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}}, \emph{Resource Shapes (ReSh)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shapes-20140211/}}, \emph{Shape Expressions (ShEx)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}}, and the \emph{Web Ontology Language} \emph{(OWL)}\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}. Despite the fact that OWL is arguably not a constraint language, it is widely used in practice as such under the closed-world and unique name assumptions.
 
-With its direct support of validation via SPARQL, the \emph{SPARQL Inferencing Notation (SPIN)}\footnote{\url{http://spinrdf.org/}} is also very popular to formulate and check constraints \cite{Fuerber2010}. We consider SPIN as a low-level language in contrast to the other constraint languages where specific language constructs exist to define constraints in a declarative and in comparison more intuitive way -- although, SPARQL aficionados might object particularly to the latter point.
+With its direct support of validation via SPARQL, the \emph{SPARQL Inferencing Notation (SPIN)}\footnote{\url{http://spinrdf.org/}} is also very popular to formulate and check constraints \cite{Fuerber2010}. We consider SPIN as a low-level language in contrast to the other constraint languages where specific language constructs exist to define constraints in a declarative and in comparison more intuitive way -- although SPARQL aficionados might object particularly to the latter point.
 
 The power of SPIN is shown in 
 Table \ref{tab:constraint-type-specific-expressivity}, where we list the fraction (and absolute numbers in brackets) of how many constraint types each of these languages supports \cite{BoschNolleAcarEckert2015}. 
@@ -170,7 +170,7 @@ We further see that OWL 2 is currently the most expressive high-level constraint
 We formerly demonstrated that a high-level constraint language like OWL 2 and DSP can be implemented by mapping the language to SPIN using SPARQL CONSTRUCT queries \cite{BoschEckert2014-2}. We provide a validation environment where own mappings from arbitrary constraint languages can be provided and tested\footnote{Online available at: \url{http://purl.org/net/rdfval-demo}, source code online available at: \url{https://github.com/boschthomas/rdf-validator}.}. The only limitations are that the constraints have to
 be expressed in RDF and that the constraint language is expressable in SPARQL.
 
-The constraint type \emph{minimum qualified cardinality restrictions} which corresponds to the requirement \emph{R-75}\footnote{Requirements are identified in the database by an R and a number, additionally an alphanumeric identifier is provided, in this case R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES. Online at: \url{http://lelystad.informatik.uni-mannheim.de/rdf-validation/?q=node/82}} can be used to formulate the constraint that publications must have at least one author which must be a person. This constraint can be expressed as follows using different constraint languages:
+The constraint type \emph{minimum qualified cardinality restrictions} which corresponds to the requirement \emph{R-75}\footnote{Requirements are identified in the database by an R and a number, additionally an alphanumeric identifier is provided, in this case R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES. Online at: \url{http://lelystad.informatik.uni-mannheim.de/rdf-validation/?q=node/82}} can be instantiated to formulate the constraint that publications must have at least one author which must be a person. This constraint can be expressed as follows using different constraint languages:
 
 \begin{ex}[commandchars=\\\{\}]
 \textit{OWL 2:} Publication a owl:Restriction ;
@@ -205,11 +205,11 @@ The constraint type \emph{minimum qualified cardinality restrictions} which corr
 SELECT ( COUNT ( ?arg1 ) AS ?c ) WHERE \{ ?arg1 ?arg2 ?o . ?o a ?arg3 . \}
 \end{ex}
 
-Note that the SPIN representation is NOT a mapping, but a direct expression of the constraint using a SPARQL CONSTRUCT query that creates a spin:ConstraintViolation if the constraint is violated. The mappings for OWL 2 and DSP are much more complicated and can be found in the mappings provided by us\footnote{OWL 2 mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/OWL2_SPIN-Mapping.ttl}; DSP mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/DSP_SPIN-Mapping.ttl#L4665}}.
+Note that the SPIN representation of the constraint is NOT a SPIN mapping to implement the constraint, but a direct expression of the constraint using a SPARQL CONSTRUCT query that creates a spin:ConstraintViolation if the constraint is violated. 
 
-On the other hand, it can be seen that the higher-level constraint languages are comparatively similar, there seems to be a pattern, a common way to express this type of constraint. Therefore, a mapping from a high-level language to another high-level language would be considerably easier. Unfortunately, there is not (yet) a high-level language that supports all constraint types. 
+It can be seen that the higher-level constraint languages are comparatively similar, there seems to be a pattern, a common way to express this type of constraint. Therefore, a mapping from a high-level language to another high-level language would be considerably easier. Unfortunately, there is not (yet) a high-level language that supports all constraint types. 
 
-The creation of mappings of constraint languages to SPIN is in many cases not straight-forward and requires profound knowledge of SPARQL, as the following example demonstrates. In this example, the validation of the \emph{minimum qualified cardinality restrictions} constraint type is implemented for DSP:
+The creation of mappings of constraint languages to SPIN to implement their validation is in many cases not straight-forward and requires profound knowledge of SPARQL, as the following example demonstrates. In this example, the validation of the \emph{minimum qualified cardinality restrictions} constraint type is implemented for DSP:
 
 \begin{ex}[commandchars=\\\{\}]
 CONSTRUCT \{
@@ -232,6 +232,8 @@ WHERE \{
     BIND ( \textit{qualifiedCardinality}( ?this, ?property, ?valueClass ) AS ?cardinality ) .
     FILTER ( ?cardinality < ?minimum ) . \}
 \end{ex}
+
+The SPIN mappings for OWL 2 and DSP are rather complicated and can be found in the mappings provided by us\footnote{OWL 2 mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/OWL2_SPIN-Mapping.ttl}; DSP mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/DSP_SPIN-Mapping.ttl#L4665}}.
 
 In this paper, we build on the experience gained from mapping several constraint languages to SPIN and from the analysis of the identified constraint types to create an intermediate layer, a framework that is able to describe the mechanics of all constraint types and that can be used to map high-level languages more easily. 
 
@@ -969,7 +971,7 @@ The W3C Data Shapes Working Group currently develops \emph{SHACL} \cite{W3C-SHAC
 
 \section{Conclusion and Future Work}
 
-In this paper, we outlined our idea of a general framework to support the mapping of high-level constraint languages to a generic representation, which subsequently can be used to generate validating SPIN/SPARQL queries to actually validate data against constraints provided in the high-level language. The framework consists of a very simple conceptual model using the RDF Constraints Vocabulary (RDF-CV) which has been introduced in this paper. The core of the framework is the definition of 103 constraining elements that are used to define constraints of all 81 types that to date have been identified within the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group.
+In this paper, we outlined our idea of a general framework to support the mapping of high-level constraint languages to a generic representation, which subsequently can be used to generate validating SPIN/SPARQL queries to actually validate data against constraints provided in the high-level language.\tb{I do not understand this!} The framework consists of a very simple conceptual model using the \emph{RDF Constraints Vocabulary (RDF-CV)} which has been introduced in this paper. The core of the framework is the definition of 103 constraining elements that are used to define constraints of all 81 constraint types that to date have been identified within the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group.
 The full definition of all constraint types and the generic representation of the types in RDF-CV is provided in an accompanying technical report \cite{BoschNolleAcarEckert2015}.
 
 We have demonstrated how the framework can be used to map a constraint language to RDF-CV and also how to map back from RDF-CV to the constraint language. The latter enables the transformation of semantically equivalent constraints from one constraint language to another via the RDF-CV intermediate representation.
@@ -977,7 +979,7 @@ We have demonstrated how the framework can be used to map a constraint language 
 We think that this approach is suitable
 \begin{enumerate}
   \item to implement the validation of constraints consistently across constraint languages,
-  \item to support the extension of constraint languages by means of a simple mapping, and
+  \item to support the extension of constraint languages by means of a simple mapping\tb{was genau meinst du damit? wenn weitere constraint typen unterstützt werden sollen?}, and
   \item to enhance or rather establish the interoperability of different constraint languages.
 \end{enumerate}
 
